# the-raytracer-challenge

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
include/: Canvas.cpp  Canvas.hpp  Colour.hpp  Intersect.cpp  Intersect.hpp  Light.hpp  Material.cpp  Material.hpp  Matrix.cpp  Matrix.hpp  MatrixImpl.hpp  Point.hpp  Utils.hpp  Vector.hpp  simulation.hpp
src/: main.cpp  simulation.cpp
tests/: CMakeLists.txt  test_lights.cpp  test_main.cpp  test_materials.cpp  test_ray_sphere_intersection.cpp  test_transform.cpp
